# pre_push

./: .clang-format  .travis.yml  CMakeLists.txt  feature_trait.cpp  main.cpp  palindrome.cpp  tmp.cpp
src/: CMakeLists.txt
src/palindrome/: CMakeLists.txt  palindrome.cpp
